# acid4sigmas-db-api

./: Cargo.toml  README.md  Secrets.toml  schema.sql
docs/: insert.md  retrieve.md  update.md
src/: cache.rs  index.html  main.rs  secrets.rs  tokio_spawner.rs
src/db/: bulk_insert.rs  db_handler.rs  delete.rs  insert.rs  mod.rs  retrieve.rs  table.rs  update.rs
